finished introduction and mental models section; on to case study: rise of medici

--- a/styles.scss
+++ b/styles.scss
@@ -91,6 +91,7 @@ span.katex-html {
   letter-spacing: 0.02em;
   color: $heading-color;
   font-weight: 400;
+  font-family: "Fira Sans", sans-serif;
 }
 
 
